# VibeOS

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: cmake-multi-platform.yml
artifacts/: bootloader.efi
boot/: README.md  bootloader_stub.c  freestanding_runtime.c  uefi_boot.h  uefi_boot_handoff.c  uefi_boot_handoff.h  uefi_boot_info.c  uefi_boot_info.h  uefi_file_io.c  uefi_file_io.h  uefi_firmware.c  uefi_firmware.h  uefi_linker.ld  uefi_main.c  uefi_memory.c  uefi_memory.h  uefi_pe_loader.c  uefi_pe_loader.h  uefi_protocol.c  uefi_protocol.h  uefi_serial.c  uefi_serial.h
cmake/: convert_efi_image.cmake  create_boot_image.cmake  vibeos_toolchain_info.cmake.in
design/: kernel_modules.md  repository_structure.md  system_diagrams.md
docs/: architectural_review_for_developer_2026-04-03.md  architecture.md  boot.md  compatibility.md  drivers.md  filesystem.md  implementation_progress.md  ipc.md  kernel_design.md  memory_management.md  networking.md  project_status_assessment_2026-04-03.md  scheduler.md  security.md  software_architecture_specification.md  syscalls.md  test_automation_spec.md  test_feedback_profiles.md  testing_strategy.md  toolchain.md  userland.md  vision.md
docs/adrs/: ADR-0001-hybrid-kernel-model.md  ADR-0002-platform-bringup-baseline.md  ADR-0003-handle-based-native-abi.md  ADR-0004-scheduler-foundation.md  ADR-0005-virtual-memory-model.md  ADR-0006-user-space-first-drivers-and-filesystems.md  README.md
docs/implementation_progress/: bootloader.md  driver_framework.md  filesystem_layer.md  init_system.md  interrupt_handling.md  ipc_subsystem.md  kernel_core.md  memory_manager.md  networking_stack.md  process_scheduler.md  system_call_interface.md  user_space_interface.md  virtual_memory.md
include/vibeos/: arch_x86_64.h  boot.h  bootloader.h  compat.h  driver_host.h  drivers.h  fs.h  interrupts.h  ipc.h  ipc_transfer.h  kernel.h  log.h  mm.h  net.h  object.h  policy.h  proc.h  scheduler.h  security_model.h  service_ipc.h  services.h  syscall.h  syscall_abi.h  syscall_policy.h  timer.h  trap.h  user_api.h  vm.h  waitset.h
kernel/: README.md
kernel/arch/: README.md
kernel/arch/x86_64/: arch_hw.c  boot_stub.c  elf_load.c  entry.s  idt.c  isr.S  kernel.ld  serial.c  trap.c
kernel/core/: README.md  interrupts.c  kmain.c  log.c  policy.c  security.c  syscall.c  syscall_policy.c
kernel/ipc/: README.md  channel.c  event.c  handle_transfer.c  waitset.c
kernel/mm/: README.md  pmm.c  vm.c
kernel/object/: README.md  handle_table.c
kernel/platform/: README.md
kernel/proc/: README.md  process.c
kernel/sched/: README.md  scheduler.c
kernel/time/: README.md  timer.c
research/: os_comparisons.md
roadmap/: development_phases.md  milestones.md  phase2_technical_backlog.md  risk_register.md
scripts/: README.md  make-vm-images-linux.sh  make_esp_image.py  qemu-boot-image-linux.py  qemu-cli-smoke-linux.py  qemu-smoke-cli-linux.sh  qemu-smoke-linux.sh  qemu-smoke-ovmf-linux.sh  run-qemu-ovmf.ps1  run-qemu.ps1  run-tests.ps1
tests/: README.md
tests/bootloader/: uefi_bootloader_tests.c
tests/kernel/: kernel_tests.c
tools/: README.md  bin2c.py  efi_pe_fixup.py
user/: README.md
user/compat/: README.md  compat_runtime.c
user/compat/linux/: README.md  linux_compat.c
user/compat/macos/: README.md  macos_compat.c
user/compat/windows/: README.md  windows_compat.c
user/devmgr/: README.md  device_manager.c  driver_host.c
user/drivers/: README.md  driver_framework.c
user/fs/: README.md  vfs_ops.c  vfs_service.c
user/init/: README.md  init_system.c
user/lib/: README.md  user_api.c
user/net/: README.md  network_service.c  socket.c
user/prog/: hello.c  task.c  user.ld
user/sec/: README.md
user/servicemgr/: README.md  service_ipc.c  service_manager.c
user/shell/: README.md
